# CMakeTemplates

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
Boost/: CMakeLists.txt  main.cpp
CUDA/: CMakeLists.txt
CUDA/include/: myKernel.h
CUDA/src/: main.cpp  myKernel.cu
OpenCV/: CMakeLists.txt  main.cpp
OpenGL/: App.cpp  CMakeLists.txt  glad.c
OpenGL/include/glad/: glad.h
PlainC++/: CMakeLists.txt
PlainC++/include/: Animal.h
PlainC++/src/: Animal.cpp  App.cpp
Qt/: CMakeLists.txt  HelloWorldInQt.pro
SFML/: CMakeLists.txt  README.md
SFML/src/: main.cpp
